<resources>
    <string name="app_name">Thrive Pregnancy</string>
   	<string name="menu_timeline">My Timeline</string>
   	<string name="menu_care">My Care</string>
   	<string name="menu_need">I Need</string>
   	<string name="icon">Icon</string>
	<string name="photo">Photo</string>
	<string name="note">Add a Note</string>
	<string name="appt">Record Appointment</string>
	<string name="needit">Need It</string>
	<string name="gotit">Got It</string>
        <string name="TabName_Timeline">My Timeline</string>
        <string name="TabName_MyCare">My Care</string>
        <string name="TabName_INeed">I Need...</string>
        <string name="Timeline_Week">Week </string>
        <string name="Timeline_AddType_Diary">Add a Diary Entry</string>
        <string name="Timeline_AddType_Appointment">Add an Appointment</string>
        <string name="PersonalInfo_Title">Personal Info</string>
        <string name="PersonalInfo_Mother_Name">My Name:</string>
        <string name="PersonalInfo_Due_Date">Estimated Due Date:</string>
        <string name="PersonalInfo_Primary_Doctor">My Doctors Name:</string>
        <string name="PersonalInfo_Hospital">My Hospital:</string>
        <string name="PersonalInfo_DrPhone">24-Hour Doctor on Call:</string>
        <string name="PersonalInfo_DrPhone_Default">604-875-2161</string>
        <string name="Question_Title">My Questions</string>
        <string name="Appointment_Title">My Appointments</string>
        <string name="Appointment_Doctor">Appointment For:</string>
        <string name="Appointment_Date">Date:</string>
        <string name="Appointment_Time">Time:</string>
        <string name="Appointment_Location">Address:</string>
        <string name="Appointment_Note">Notes:</string>
        <string name="Appointment_Help">You can add a photo, such as of an appointment card or map.</string>
        <string name="TestResults_Title">My Test Results</string>
        <string name="TestResults_Photo_Date">Date:</string>
        <string name="TestResults_Note">Notes:</string>
        <string name="INeed_Checklist_Title">Checklist</string>
        <string name="INeed_Checklist_GotIt">Got it</string>
        <string name="INeed_Checklist_NeedIt">Need it</string>
        <string-array name="INeed_Items">
                <item>Food</item>
                <item>Housing</item>
                <item>Help with Drugs and Alcohol</item>
                <item>Social Work</item>
                <item>Income assistance</item>
                <item>Dental care</item>
                <item>Family Doctor</item>
                <item>Doula</item>
                <item>Baby stuff</item>
                <item>ID</item>
        </string-array>
        <string name="INeed_Food_Title">Food</string>
        <string name="INeed_FoodResources_Title">Food Resources</string>
        <string name="INeed_FoodResources_Text"><![CDATA[
<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
<html xmlns="http://www.w3.org/1999/xhtml">
<head>
<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
<title>Untitled Document</title>
</head>

<body>
<h1>Food Resources</h1>
<h2>Food Banks</h2>
<p><strong>Vancouver Food Bank</strong></p>
<p>To find which food bank  is closest to you, please phone 604-876-3601, Mon-Fri  8:30-4:00.<br />
  Usually food banks are closed the week the income assistance cheques are given.</p>
<p><a href="https://www.foodbank.bc.ca/find-help">https://www.foodbank.bc.ca/find-help</a></p>
<p><strong>City Reach Food Bank </strong><br />
  The Food For Families program is a weekly nutritious food bank for families with children living at or below the poverty line. We offer wholesome, nourishing food appropriate for growing brains. <br />
  The food bank operates every <strong>Tuesday evening</strong> (Doors at 6:00pm and food bank from 7-8:30pm), and <strong>Thursday morning (</strong>Doors at 9:30am and food bank from 10:30-12 noon). Our office hours are Monday to Thursday 9am-5pm.<br />
  It is run by Broadway Church, but is not in a church building. Located in &ldquo;the Warehouse&rdquo; 2650 Slocan St (near Broadway), across from the Van Tech soccer field.  Closest skytrain in Renfrew.<br />
  There is a $5 one-time registration fee.  Please bring ID to register.<br />
  Contact <a href="mailto:damarisg@cityreach.org?Subject=Food%20For%20Families">Damaris</a> or <a href="mailto:sarahs@cityreach.org?Subject=Food%20for%20Families">Sarah S</a>.&nbsp;&nbsp;for more information.<br />
<a href="http://broadwaychurch.com/cityreach/">http://broadwaychurch.com/cityreach/</a></p>
<p><strong>Covenant House</strong><br />
  Covenant House provides shelter, free food and much more, for youth 16-22 <br />
  Fri -  women only drop-in 9:30 - 12:00, snack provided<br />
  Mon/Fri hot meal 3:30-5:00<br />
  Thurs sandwiches 1:00-4:00<br />
  <a href="http://covenanthousebc.org/">http://covenanthousebc.org/</a>   604-875-7474</p>
<p><strong>Broadway Youth Resource Centre</strong><br />
  BYRC provides counselling, free food and much more for youth under 24<br />
  Mon/Tues/Wed/Thur/Fri breakfast 10:00-11:00 am<br />
  Mon/Tues/Thur/Fri lunch 1:00 pm ; Wed 2:30<br />
  Thurs dinner 5:00 pm<br />
  LOCATION:<strong><br />
  </strong>#103 - 2780 East Broadway Street<br />
  Vancouver, BC, V5M 1Y8 <br />
  CONTACT:<strong><br />
  </strong>Phone: 604-709-5720<br />
  Fax: 604-709-5721<br />
  Email: <a href="mailto:byrc@pcrs.ca">byrc@pcrs.ca</a> <br />
  <a href="http://www.pcrs.ca/services">http://www.pcrs.ca/services</a></p>
<p><strong>Cedar Cottage Neighbourhood House Aboriginal Family Night</strong><br />
  For Aboriginal families who live in East Van<br />
  Tues dinner 6:00 – 8:00 pm<br />
  4065 Victoria Dr.<br />
  Please call Sharnelle to say you&rsquo;re coming.  604-874-4231</p>
<p><strong>Quest Food Exchange</strong><br />
  Quest operates four not-for-profit grocery markets where clients can shop by referral. Families can access healthy food at an affordable price, and are empowered to make their own choices about what they purchase.<br />
  2020 DUNDAS ST., VANCOUVER, BC V5L 1B1<br />
  Tel: 604-602-0186 Fax: 604-682-3494<em><br />
  <em>Hours of Operation:</em></em><br />
  9am-4:15pm Monday-Saturday<br />
  Closed: Sunday and holidays<br />
  611 EAST HASTINGS ST., VANCOUVER, BC V6A 1R2<br />
  Tel: 604-605-0735<em><br />
  <em>Hours of Operation:</em></em><br />
  9am-4:15pm Monday-Saturday<br />
Closed: Sunday and holidays </p>
<h2><strong>For Youth Pregnancy and Parenting Program clients:  Good Food Bag</strong></h2>
<p>Through the generous donation from ProOrganics, the Good Food Bag program can provide you with fresh fruits and vegetables for only $2.</p>
<p>How to Join:<br />
  - You have to be in YPPP (Youth Pregnancy and Parenting Program) or Healthiest Babies Possible<br />
- Let your dietitian know you are interested and pay $2.  She will sign you up.</p>
<p>How to get it:<br />
</p>
 <p>- On the Tuesday, pick up your bags at:</p>
 <p align="left"><strong>Evergreen </strong><br />
   Community Health Centre<br />
   3425 Crowley Dr<br />
   near Joyce skytrain<br />
   (North East Room)</p>
 <p align="left"><strong>Tuesday     1:30 – 3:00 pm</strong></p>
 <p align="left"><strong>Dates for 2014</strong><br />
June     17<br />
July     15<br />
Aug     19<br />
Sept     16<br />
Oct     21<br />
Nov     18<br />
Dec     16<br clear="all" />
</p>
<p align="left">- You can be in the Good food bag program until your baby is 1 year old.<br />
  - Please call 604-675-3982  extension 3 if you can&rsquo;t pick up your bag.<br />
- If you don&rsquo;t pick up your bag, you lose your $2 and can&rsquo;t sign up again because many people want this program.</p>
<p align="left">In partnership with United Way, ProOrganics and Sharing Farm<br />
</p>
</body>
</html>
        ]]></string>
        <string name="INeed_HealthyEatingTips_Title">Healhy Eating Tips</string>
        <string name="INeed_MealIdeas_Title">Quick and Easy Meal Ideas</string>
        <string name="INeed_FoodSafety_Title">Food Safety</string>
        <string name="INeed_Housing_Title">Housing</string>
        <string name="INeed_Shelter_Title">Shelters</string>
</resources>